# ocel-etl-github

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
docs/adr/: 0001-github-to-ocel-mapping.md
src/: client.rs  lib.rs  main.rs  mapper.rs  models.rs  sync.rs
tests/: client.rs  mapper.rs  sync.rs
