[package]
name = "ocel-etl-github"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/katsut/ocel-etl-github"
description = "GitHub → OCEL 2.0 ETL connector"

[[bin]]
name = "ocel-github"
path = "src/main.rs"

[dependencies]
ocel = "0.1.3"
ocel-etl = "0.1.2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
